custom scrollbar and responsive design fix

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -6,33 +6,49 @@
 
 @media(min-width: 200px) and (max-width: 575px) {
     #logo{
-        width: 55px;
+        width: 50px;
     }
 
     #icon {
         display: block;
         position: absolute;
-        top: -30px;
+        top: -35px;
         right: 0;
         transform: translate(-100%, 75%);
-        font-size: 1.8rem;
+        width: 40px;
         cursor: pointer;
+    }
+    
+    #contIco {
+        left: 20px;
+    }
+    
+    #nav {
+        height: 70px;
     }
 }
 
 @media(min-width: 575.1px) and (max-width: 767px) {
     #logo{
-        width: 65px;
+        width: 50px;
     }
 
     #icon {
         display: block;
         position: absolute;
-        top: -30px;
+        top: -35px;
         right: 0;
         transform: translate(-100%, 75%);
-        font-size: 1.8rem;
+        width: 40px;
         cursor: pointer;
+    }
+
+    #contIco {
+        left: 20px;
+    }
+
+    #nav {
+        height: 70px;
     }
 }
 
@@ -42,7 +58,7 @@
     }
 
     #icon {
-        display: block;
+        display: none;
         position: absolute;
         top: -30px;
         right: 0;
